<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="niravitalzohar.smartlock.smartlock.ChangeDetails">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColor="@color/colorAccent"
        android:id="@+id/cnguser"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cngphone"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="20dp"


        />

    <TextView
        android:text="@string/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/category"
        android:textSize="15dp"
        android:textColor="@color/gray2"

        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:orientation="horizontal"
        android:id="@+id/categoryRG"

        >

        <RadioButton
            android:text="@string/manger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/manger"
            android:layout_below="@+id/category"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/lightgreen"
            android:textColor="@color/gray2"



            />

        <RadioButton
            android:text="@string/member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/member"
            android:layout_above="@+id/phone"
            android:layout_toRightOf="@+id/category"
            android:layout_toEndOf="@+id/category"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:buttonTint="@color/lightgreen"
            android:textColor="@color/gray2"

            />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pmemeber"
            android:text="@string/pmember"
            android:buttonTint="@color/lightgreen"
            android:textColor="@color/gray2"
            android:layout_marginLeft="10dp"

            />
    </RadioGroup>

    <TextView
        android:id="@+id/line1"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingTop="5dip"
        android:gravity="center_horizontal"
        android:layout_below="@+id/users"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray7"
        android:layout_marginTop="10dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lockper"
        android:id="@+id/permission"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="@color/gray2" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:id="@+id/lockperRG"


        >

        <RadioButton
            android:text="@string/anytime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/anytime"
            android:buttonTint="@color/lightgreen"
            android:textColor="@color/gray2"
            android:textSize="17dp"

            />

        <RadioButton
            android:text="@string/onetime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/onetime"
            android:buttonTint="@color/lightgreen"
            android:textColor="@color/gray2"
            android:layout_marginLeft="20dp"
            android:textSize="17dp"


            />

    </RadioGroup>

    <TextView
        android:id="@+id/line2"
        style="?android:attr/listSeparatorTextViewStyle"
        android:paddingTop="5dip"
        android:gravity="center_horizontal"
        android:layout_below="@+id/users"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/gray7"
        />


</LinearLayout>
