<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="niravitalzohar.smartlock.smartlock.ForgotPassword">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot"
        android:fontFamily="cursive"
        android:textSize="36sp"
        android:typeface="serif"
        android:textStyle="normal|italic"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/emailETF"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:background="@drawable/circle_et"
        android:drawableLeft="@drawable/mail"
        android:elevation="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/gray2"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/passwordETF"
        android:layout_below="@+id/emailETF"
        android:layout_marginTop="20dp"
        android:hint="@string/newpass"
        android:background="@drawable/circle_et"
        android:drawableLeft="@drawable/lock"
        android:elevation="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/gray2"
        />



    <Button
        android:layout_width="209dp"
        android:layout_height="36dp"
        android:id="@+id/cngPass"
        android:text="@string/cngPass"
        android:layout_below="@+id/passwordETF"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_bt"
        android:textColor="@color/gray"/>




</LinearLayout>
