<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sigh_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation='vertical'
    tools:context="niravitalzohar.smartlock.smartlock.SignUp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:fontFamily="cursive"
        android:textSize="36sp"
        android:typeface="serif"
        android:textStyle="normal|italic"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/emailET"
        android:layout_marginTop="50dp"
        android:hint="@string/email"
        android:background="@drawable/circle_et"
        android:drawableLeft="@drawable/mail"
        android:elevation="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/gray2"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/passwordET"
        android:layout_below="@+id/emailET"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:background="@drawable/circle_et"
        android:drawableLeft="@drawable/lock"
        android:elevation="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="textPassword"
        android:textColor="@color/gray2"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/phoneEt"
        android:layout_below="@+id/passwordET"
        android:layout_marginTop="20dp"
        android:hint="@string/phone"
        android:background="@drawable/circle_et"
        android:drawableLeft="@drawable/phone"
        android:elevation="2dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:inputType="phone"
        android:textColor="@color/gray2"
        />

    <Button
        android:layout_width="209dp"
        android:layout_height="36dp"
        android:id="@+id/signup"
        android:text="@string/signup"
        android:layout_below="@+id/emailET"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/round_bt"
        android:textColor="@color/gray"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/alredy"
        android:text="already have user account"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        />


</LinearLayout>


